--- a/ImdbQuiz/QuizApi/packages.config
+++ b/ImdbQuiz/QuizApi/packages.config
@@ -6,6 +6,7 @@
   <package id="AttributeRouting.Core.Web" version="3.5.6" targetFramework="net451" />
   <package id="AttributeRouting.WebApi" version="3.5.6" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
