--- a/ImdbQuiz/packages/repositories.config
+++ b/ImdbQuiz/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Entities\packages.config" />
   <repository path="..\QuizApi\packages.config" />
+  <repository path="..\QuizBLL\packages.config" />
   <repository path="..\Repositories\packages.config" />
 </repositories>
