publish profile to azure api apps

--- a/QuizClient/QuizClient/QuizClient.csproj
+++ b/QuizClient/QuizClient/QuizClient.csproj
@@ -157,6 +157,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Quiz\Index.cshtml" />
     <Content Include="Views\Quiz\GetMoreInfoClue.cshtml" />
+    <Content Include="Views\Home\Quiz.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
