Styling, Jens första..

--- a/QuizClient/QuizClient/QuizClient.csproj
+++ b/QuizClient/QuizClient/QuizClient.csproj
@@ -124,6 +124,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\imdb-2-icon.png" />
+    <Content Include="img\RT_logo.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\imdbquiz.pubxml" />
