high score list

--- a/QuizClient/QuizClient/QuizClient.csproj
+++ b/QuizClient/QuizClient/QuizClient.csproj
@@ -129,6 +129,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\imdbquiz.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\highscorescript.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -156,6 +157,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Rules.cshtml" />
     <Content Include="Views\Home\Api.cshtml" />
+    <Content Include="Views\Home\HighScore.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
