--- a/ImdbQuiz/QuizApi/Web.config
+++ b/ImdbQuiz/QuizApi/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ImdbContext" connectionString="metadata=res://*/ImdbModel.csdl|res://*/ImdbModel.ssdl|res://*/ImdbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=shan14.database.windows.net;initial catalog=ImdbTop250;user id=shan14;password=Phs12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ImdbContext" connectionString="metadata=res://*/ImdbModel.csdl|res://*/ImdbModel.ssdl|res://*/ImdbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=asaskoog.database.windows.net;initial catalog=imdb;user id=shan14@asaskoog;password=Phs12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
